unpackaged/main/default/objects/Tutorial_Step__mdt/Tutorial_Step__mdt.object-meta.xml
<CustomObject>
    <label>Tutorial Step</label>
    <pluralLabel>Tutorial Steps</pluralLabel>
</CustomObject>