unpackaged/main/default/objects/Tutorial_Step__mdt/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <label>Placement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>auto</fullName>
                <default>true</default>
                <label>auto</label>
            </value>
            <value>
                <fullName>top</fullName>
            </value>
            <value>
                <fullName>bottom</fullName>
            </value>
            <value>
                <fullName>left</fullName>
            </value>
            <value>
                <fullName>right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>