unpackaged/main/default/objects/Tutorial_Step__mdt/fields/Target_Selector__c.field-meta.xml
<CustomField>
    <fullName>Target_Selector__c</fullName>
    <label>Target Selector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>