unpackaged/main/default/objects/Tutorial_Step__mdt/fields/Tour__c.field-meta.xml
<CustomField>
    <fullName>Tour__c</fullName>
    <label>Tour</label>
    <referenceTo>Tutorial_Tour__mdt</referenceTo>
    <relationshipLabel>Tutorial Steps</relationshipLabel>
    <relationshipName>Tutorial_Steps</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>